# terminal_hell

./: Behavior.md  Cargo.toml  README.md  audio-spec.md  build.rs  spec.md  tech-debt.txt
.claude/: settings.local.json
content/core/: archetypes.toml
content/core/art/: rusher.art
content/core/art/borderlands_pandora/: goliath.art  marauder.art  psycho.art  skag.art  suicide_psycho.art
content/core/art/dead_space/: brute.art  divider.art  infector.art  lurker.art  pregnant.art  slasher.art  swarmer.art  twitcher.art
content/core/art/deep_rock/: glyphid_exploder.art  glyphid_grunt.art  glyphid_menace.art  glyphid_praetorian.art  glyphid_slasher.art  glyphid_webspitter.art
content/core/art/doom_inferno/: archvile.art  cacodemon.art  hell_knight.art  imp.art  lost_soul.art  pain_elemental.art  pinkie_demon.art  revenant.art
content/core/art/factorio_biters/: behemoth_biter.art  big_biter.art  medium_biter.art  small_biter.art  spitter.art  suicide_biter.art
content/core/art/gears_locust/: berserker.art  bloodmount.art  boomer.art  corpser.art  locust_drone.art  theron_guard.art  ticker.art  wretch.art
content/core/art/half_life/: combine_elite.art  combine_soldier.art  fast_zombie.art  headcrab.art  headcrab_zombie.art
content/core/art/halo_covenant/: brute_chieftain.art  elite_minor.art  grunt.art  hunter_fuel_rod.art  jackal_shield.art  jackal_sniper.art
content/core/audio/: buses.toml  reactions.toml
content/core/brands/: borderlands_pandora.toml  chaos_roguelike.toml  dead_space.toml  deep_rock.toml  doom_inferno.toml  factorio_biters.toml  fps_arena.toml  gears_locust.toml  half_life.toml  halo_covenant.toml  halo_flood.toml  helldivers.toml  killing_floor.toml  left_4_dead.toml  quake_arena.toml  resident_evil.toml  rimworld_mechs.toml  risk_of_rain.toml  serious_sam.toml  soulsborne_invader.toml  stalker_zone.toml  starving_rats.toml  tactical.toml  tarkov_scavs.toml  tyranid_swarm.toml  vampire_survivors.toml  xenomorph_hive.toml  zerg_tide.toml
content/core/substances/: acid_pool.toml  blood_pool.toml  bone_dust.toml  ember_scatter.toml  fire.toml  flood_ichor.toml  oil_pool.toml  psychic_residue.toml  scorch.toml  uranium_slag.toml
src/: arena.rs  art.rs  behavior.rs  body_effect.rs  camera.rs  carcosa.rs  console.rs  content.rs  corpse.rs  enemy.rs  fb.rs  game.rs  gamepad.rs  gamepad_linux_ff.rs  gore.rs  hud.rs  input.rs  install_server.rs  interaction.rs  lib.rs  log_buf.rs  main.rs  menu.rs  mip_hint.rs  mouse.rs  particle.rs  pathfind.rs  perf_overlay.rs  perk.rs  pickup.rs  platform.rs  player.rs  primitive.rs  projectile.rs  share.rs  spatial.rs  sprite.rs  stun.rs  substance.rs  tag.rs  (+7 more)
src/audio/: audit.rs  cv.rs  engine.rs  mod.rs  overlay.rs  params.rs  paths.rs  schema.rs  transitions.rs  watch.rs
src/bench/: mod.rs  report.rs  runner.rs  scenario.rs  scenarios.rs  scripts.rs
src/bindings/: mod.rs  router.rs  wizard.rs
src/net/: client.rs  mod.rs  proto.rs  server.rs
tests/: bench_smoke.rs
(+144 files in other folders)
