[package]
name = "terminal_hell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
ratatui = "0.29"
renet = "2"
renet_netcode = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
