[package]
name = "terminal_hell"
version = "0.1.0"
edition = "2024"
# `cargo run` without --bin launches the game. Use `cargo run --bin th_record`
# for the recorder GUI.
default-run = "terminal_hell"

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false }
arc-swap = "1"
base32 = "0.5"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
ctrlc = "3"
getrandom = "0.2"
hmac = "0.12"
hound = "3"
igd = "0.12"
include_dir = "0.7"
notify = "6"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
ratatui = "0.29"
renet = "2"
renet_netcode = "2"
rodio = { version = "0.20", default-features = false, features = ["wav", "vorbis"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tiny_http = "0.12"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI dev tool (th_record recorder) — only pulled in because the
# recorder shares the main crate for schema + audit + path helpers.
# Production builds of the game don't launch the GUI and pay only the
# binary-size cost of egui being linked into the library.
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.28"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
